# hydradancer_fw

./: .clang-format  .gitattributes  .gitmodules  .pre-commit-config.yaml  BUILD.md  CMakeLists.txt  CODING_STYLE.md  LICENSE  README.md  format.sh  pylintrc  requirements.txt
.github/workflows/: Build.yml  Format.yml
cmake/: wch-ch56x-toolchain.cmake
docs/: Testing.md
hydradancer/: CMakeLists.txt  format.sh
hydradancer/firmware_control_board/User/: main.c  usb_device.h  usb_handlers.h
hydradancer/firmware_emulation_board/: .ld  format.sh
hydradancer/firmware_hydradancer/: .gitignore  CMakeLists.txt  make_version.sh
hydradancer/firmware_hydradancer/User/: definitions.c  definitions.h  main.c  usb_control_descriptors.h  usb_control_device.c  usb_control_device.h  usb_control_handlers.h  usb_emulation_device.c  usb_emulation_device.h  usb_emulation_handlers.h
hydradancer/tests/: CMakeLists.txt
hydradancer/tests/native/: .gitignore
hydradancer/tests/native/libusb_portable/: hydradancer_usb_devbulk_vid_pid.h  libusb_portable.c  libusb_portable.h
hydradancer/tests/native/test_loopback/: How_To_Build.md  Makefile  test_loopback.c
hydradancer/tests/native/test_speedtest/: Makefile  hydradancer_usb_benchmark  test_speedtest.c
hydradancer/tests/scripts/: .gitignore  test_hspi_serdes.py  test_loopback.py  test_loopback_randomize_packetsize.py  test_speedtest.py  test_speedtest_one_by_one.py
hydradancer/tests/test_backend/facedancer_replacement_loopback/: Makefile  facedancer_replacement  facedancer_replacement_loopback  main.c
hydradancer/tests/test_backend/facedancer_replacement_speedtest/: Makefile  facedancer_replacement_speedtest  main.c
hydradancer/tests/test_backend/firmware_emulation_board/: CMakeLists.txt
hydradancer/tests/test_backend/firmware_emulation_board/User/: definitions.h  log_to_control.c  log_to_control.h  main.c  usb2_device_descriptors.h  usb_device.h  usb_handlers.h
legacy/: CMakeLists.txt
legacy/firmware_control_board/: .gitignore  .ld  CMakeLists.txt
legacy/firmware_control_board/User/: definitions.h  main.c  usb2_device_descriptors.h  usb3_device_descriptors.h  usb_device.h  usb_handlers.h
legacy/firmware_emulation_board/: CMakeLists.txt
legacy/firmware_emulation_board/User/: definitions.h  main.c  usb_device.h  usb_handlers.h
tools/Docker/: Dockerfile  build.sh  run.sh
